# metr4810-team-17

./: .gitignore  .gitmodules  .pylintrc  Development.md  README.md  Server.md  alititude_fuser.py  calibration_matrices.py  camera_matrix.npy  charuco_calibrate.py  charuco_create.py  config.json  config.py  configRect.json  configSimRect.json  configSimSnake.json  configSnake.json  controllers.py  dist.npy  dist_coeffs.npy  estimators.py  extraction.py  fmi.py  local_arucos.py  local_arucos_adaptive_origin.py  local_arucos_coord_system.py  localisation.py  log.csv  main.py  mtx.npy  my_kalman.py  opencv_calibration.py  planning.py  plotter.py  pose_estimation_IMU_pose.py  requirements.txt  robot.py  simulator.py  take_pictures.py  take_pictures_calibrate.py  (+2 more)
camera_params/: dist.npy  mtx.npy  ret.npy  rvecs.npy  tvecs.npy
camera_params_target/: dist.npy  mtx.npy  ret.npy  rvecs.npy  tvecs.npy
config/: config.json  configChamferedSpiral.json  configContinuous.json  configContinuousUnbogged.json  configLineSim.json  configPeriodic.json  configRect.json  configShift.json  configShiftSim.json  configSim.json  configSimRect.json  configSimSnake.json  configSimSpiral.json  configSnake.json  configSnakeSim.json  configSpiral.json  configs.txt
load/: actually_working.uf2  corrected.about  corrected.uf2  extraction-full.uf2  extraction-reversed-full.uf2  extraction-reversed.uf2  full.about  full.uf2  main.uf2  no-udp-block.uf2  reversed.about  reversed.uf2  slower.about  slower.uf2  wifi-notcp.uf2  wifi-optimised.uf2  wifi-trimmed.uf2
old/: local_arucos.py  local_arucos_coord_system.py  opencv_calibration.py
saved_calibrations/c270_new (0.36952)/: camera_matrix.npy
saved_calibrations/c270_original/: camera_matrix.npy  dist_coeffs.npy
sim/: tank_sim.fmu  tank_sim_fmu.mlproj
src/: CMakeLists.txt  FreeRTOSConfig.h  README.md  adc.c  adc.h  blink.c  blink.h  bluetooth.c  bluetooth.h  bluetooth_common.c  bluetooth_common.h  controller.c  controller.h  delivery.c  delivery.h  detection.c  detection.h  diagnostics.c  diagnostics.h  digitalio.c  digitalio.h  extraction.c  extraction.h  led.c  led.h  localisation.c  localisation.h  lwipopts.h  main.c  make.sh  motors.c  motors.h  pathplanning.c  pathplanning.h  rgb.c  rgb.h  watchdog.c  watchdog.h  wifi.c  wifi.h  (+2 more)
src/dhcpserver/: dhcpserver.h
src/dnsserver/: dnsserver.c
